[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.10.1", features = ["full"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "serde_json", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_derive = "1.0"
r2d2 = "0.8"
diesel_migrations = "2.0"
serde_json = "1.0"

[dependencies.paperclip]
version = "0.8.2"
features = ["actix4"]
